--- a/css/dynatrii.css
+++ b/css/dynatrii.css
@@ -47,4 +47,28 @@
 .dynatrii-separation {
 	clear: both;
 }
+
+.bs-cadre {
+ position: relative;
+  margin: 2px 0;
+  padding: 14px 14px 9px;
+  *padding-top: 19px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.bs-cadre-label {
+    background-color: #F5F5F5;
+    border: 1px solid #DDDDDD;
+    border-radius: 4px 0 4px 0;
+    color: #9DA0A4;
+    font-size: 12px;
+    font-weight: bold;
+    left: -1px;
+    padding: 3px 7px;
+    position: absolute;
+    top: -1px;
 }
